<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/additionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_gravity="fill"
            android:onClick="addition"
            android:text="@string/addition_btn" />

        <Button
            android:id="@+id/subtractionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="subtraction"
            android:text="@string/subtraction_btn"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_gravity="fill"/>

        <Button
            android:id="@+id/multiplicationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="multiplication"
            android:text="@string/multiplication_btn"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_gravity="fill"/>

        <Button
            android:id="@+id/divisionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="division"
            android:text="@string/division_btn"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_gravity="fill"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_gravity="fill"
            android:text="Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_gravity="fill"
            android:text="Button" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>