<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bestScoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bestScoreLabel"

            android:textAlignment="center"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="157dp" />

        <TextView
            android:id="@+id/bestScoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bestScore"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="284dp" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/view2"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="1dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <View
        android:id="@+id/view3"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="112dp"
        android:background="#c0c0c0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/yourScoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentScoreLabel"

            android:textAlignment="center"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="157dp" />

        <TextView
            android:id="@+id/yourScoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bestScore"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="284dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/replaySessionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replaySessionLabel"
        app:srcCompat="@drawable/replay64" />

    <TextView
        android:id="@+id/replaySessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tryAgainLabel"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToMenuBtn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="76dp"
        android:text="@string/menuBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nextLevelBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996" />

    <Button
        android:id="@+id/nextLevelBtn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/nextLevelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backToMenuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>